# vulcan

./: .gitignore  README.md  project.md
vulcan/: README.md  pyproject.toml
vulcan/src/vulcan/apps/api/: __init__.py  config.py  main.py
vulcan/src/vulcan/apps/api/middleware/: __init__.py  auth.py  logging.py
vulcan/src/vulcan/apps/api/models/: __init__.py  requests.py  responses.py
vulcan/src/vulcan/apps/api/routers/: __init__.py  code_generation.py  deployment.py  status.py  testing.py
vulcan/src/vulcan/apps/cli/: __init__.py  config.py  main.py
vulcan/src/vulcan/apps/cli/commands/: __init__.py  deploy_command.py  generate_command.py  status_command.py  test_command.py
vulcan/src/vulcan/apps/cli/utils/: __init__.py  config_loader.py  console.py
vulcan/src/vulcan/apps/web/: __init__.py  config.py  main.py
vulcan/src/vulcan/apps/web/api/: __init__.py  client.py
vulcan/src/vulcan/apps/web/pages/: __init__.py  code_generation.py  deployment.py  home.py  testing.py
vulcan/src/vulcan/core/vulcan_core/: __init__.py  models.py
vulcan/src/vulcan/infra/interface/: github_client.py
vulcan/tests/vulcan/unit/: test_simple.py
vulcan/tests/vulcan/unit/apps/api/: test_config.py  test_main.py
vulcan/tests/vulcan/unit/apps/api/middleware/: test_auth.py  test_logging.py
vulcan/tests/vulcan/unit/apps/api/models/: test_requests.py  test_responses.py
vulcan/tests/vulcan/unit/apps/api/routers/: test_code_generation.py  test_deployment.py  test_status.py  test_testing.py
vulcan/tests/vulcan/unit/apps/cli/: test_config.py  test_main.py
(+8 files in other folders)
